# devpost-digitalocean-storyapp

./: .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  pyrightconfig.json
.do/: app.yaml
apps/backend/: .env.example  check_fal.py  fal_client.py  image_prompt_agent.py  main.py  pyproject.toml  pyrightconfig.json  seed_agent.py  story_agent.py
apps/frontend/: Dockerfile  next.config.ts
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/app/select/: page.tsx
apps/frontend/src/app/story.demo/: page.tsx
apps/frontend/src/app/story/[id]/: page.tsx
apps/frontend/src/components/: StoryLoader.tsx
apps/frontend/src/lib/: api.ts
docs/: agents.md  architecture.md
