[project]
name = "devpost-digitalocean-storyapp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "logfire>=4.25.0",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]

[tool.uv.workspace]
members = [
    "apps/backend",
    "packages/ai-definitions",
]

[tool.uv.sources]
ai-definitions = { workspace = true }
