[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "storyapp-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sse-starlette",
    "ai-definitions",
    "pydantic-ai",
    "openai",
    "python-dotenv",
]
